manifest/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: host.myapp-example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: myapp-svc
                port:
                  number: 8080
